Also adjust tarLongFileMode for the PDF archive
Follow up of #7664

--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -286,7 +286,7 @@
                                     <appendAssemblyId>true</appendAssemblyId>
                                     <outputDirectory>target/</outputDirectory>
                                     <workDirectory>target/assembly-pdf/work</workDirectory>
-                                    <tarLongFileMode>gnu</tarLongFileMode>
+                                    <tarLongFileMode>posix</tarLongFileMode>
                                 </configuration>
                             </execution>
                         </executions>
