Command mode support

--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -274,6 +274,18 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-ide-launcher</artifactId>
+                <version>${project.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <!-- This has shaded dependencies -->
+                        <groupId>*</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-arc</artifactId>
                 <version>${project.version}</version>
             </dependency>
