--- a/devtools/gradle/build.gradle
+++ b/devtools/gradle/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation "io.quarkus:quarkus-devtools-common:${version}"
     implementation "io.quarkus:quarkus-platform-descriptor-json:${version}"
     implementation "io.quarkus:quarkus-platform-descriptor-resolver-json:${version}"
-    implementation "io.quarkus:quarkus-development-mode:${version}"
+    implementation "io.quarkus:quarkus-core-deployment:${version}"
 
     testImplementation 'org.mockito:mockito-core:3.3.3'
     testImplementation 'org.assertj:assertj-core:3.15.0'
