--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -173,10 +173,10 @@
         <sundr.version>0.19.1</sundr.version> <!-- this is to avoid annoying pop-up in eclipse about failure to init Velocity logging -->
         <flapdoodle.mongo.version>2.2.0</flapdoodle.mongo.version>
         <wiremock.version>2.24.1</wiremock.version>
-        <quarkus-spring-api.version>5.2.Alpha3</quarkus-spring-api.version>
-        <quarkus-spring-data-api.version>2.2.Alpha3</quarkus-spring-data-api.version>
-        <quarkus-spring-security-api.version>5.2.Alpha1</quarkus-spring-security-api.version>
-        <quarkus-spring-boot-api.version>2.1.Alpha1</quarkus-spring-boot-api.version>
+        <quarkus-spring-api.version>5.2.Final</quarkus-spring-api.version>
+        <quarkus-spring-data-api.version>2.1.Final</quarkus-spring-data-api.version>
+        <quarkus-spring-security-api.version>5.2.Final</quarkus-spring-security-api.version>
+        <quarkus-spring-boot-api.version>2.1.Final</quarkus-spring-boot-api.version>
         <mvel2.version>2.4.4.Final</mvel2.version>
         <htmlunit.version>2.36.0</htmlunit.version>
         <mockito.version>3.3.0</mockito.version>
