--- a/devtools/gradle/build.gradle
+++ b/devtools/gradle/build.gradle
@@ -2,15 +2,17 @@ plugins {
     id 'com.gradle.plugin-publish' version '0.10.1'
     id 'java-gradle-plugin'
 }
-compileJava.options.encoding = 'UTF-8'
-compileTestJava.options.encoding = 'UTF-8'
 if (JavaVersion.current().isJava9Compatible()) {
     compileJava.options.compilerArgs.addAll(['--release', '8'])
 }
-
 compileJava {
+    options.encoding = 'UTF-8'
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
+}
+
+compileTestJava {
+    options.encoding = 'UTF-8'
 }
 
 repositories {
