--- a/.github/autoissuelabeler.yml
+++ b/.github/autoissuelabeler.yml
@@ -9,6 +9,9 @@
 - labels: [area/gradle]
   title: "(?i).*gradle.*"
   addcomment: "/cc @quarkusio/devtools"
+- labels: [area/maven]
+  title: "(?i).*maven.*"
+  addcomment: "/cc @quarkusio/devtools"
 - labels: [area/hibernate-orm, area/persistence]
   expression: |
               title_description.matches("(?is).*hibernate.*") 
