Make GraalVM Java 11 the default image

--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -108,6 +108,7 @@
                         <quarkus-version>${project.version}</quarkus-version>
                         <surefire-version>${version.surefire.plugin}</surefire-version>
                         <graalvm-version>${graal-sdk.version-for-documentation}</graalvm-version>
+                        <graalvm-flavor>${graal-sdk.version-for-documentation}-java11</graalvm-flavor>
                         <restassured-version>${rest-assured.version}</restassured-version>
                         <keycloak-docker-image>${keycloak.docker.image}</keycloak-docker-image>
                         <!-- Project website home page -->
