fix: container-image integration with knative

--- a/integration-tests/kubernetes/standard/pom.xml
+++ b/integration-tests/kubernetes/standard/pom.xml
@@ -48,6 +48,21 @@
                     <artifactId>jaxb-api</artifactId>
                 </exclusion>
             </exclusions>
+         </dependency>
+         <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>knative-model</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.annotation</groupId>
+                    <artifactId>javax.annotation-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.xml.bind</groupId>
+                    <artifactId>jaxb-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
