Fixes related to Maven projects using the 'revision' property as the project version

--- a/independent-projects/bootstrap/core/src/test/resources/workspace-revision/root/module1/pom.xml
+++ b/independent-projects/bootstrap/core/src/test/resources/workspace-revision/root/module1/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.acme</groupId>
         <artifactId>root</artifactId>
-        <version>1.0</version>
+        <version>${revision}</version>
         <relativePath>../</relativePath>
     </parent>
 
