--- a/build-parent/pom.xml
+++ b/build-parent/pom.xml
@@ -283,6 +283,16 @@
                                             <exclude>org.slf4j:slf4j-log4j12</exclude>
                                             <exclude>org.slf4j:slf4j-log4j13</exclude>
                                             <exclude>org.osgi:org.osgi.annotation.versioning</exclude>
+                                            <!-- Ban Spring Dependencies (since we have our own jars)-->
+                                            <exclude>org.springframework:spring-core</exclude>
+                                            <exclude>org.springframework:spring-beans</exclude>
+                                            <exclude>org.springframework:spring-context</exclude>
+                                            <exclude>org.springframework:spring-web</exclude>
+                                            <exclude>org.springframework:spring-webmvc</exclude>
+                                            <exclude>org.springframework.data:spring-data-jpa</exclude>
+                                            <exclude>org.springframework.data:spring-data-commons</exclude>
+                                            <exclude>org.springframework.security:spring-security-core</exclude>
+                                            <exclude>org.springframework.boot:spring-boot</exclude>
                                         </excludes>
                                         <includes>
                                             <!-- this is for REST Assured -->
