--- a/extensions/logging-sentry/deployment/src/test/resources/application-sentry-logger-release-option.properties
+++ b/extensions/logging-sentry/deployment/src/test/resources/application-sentry-logger-release-option.properties
@@ -2,4 +2,4 @@ quarkus.log.sentry=true
 quarkus.log.sentry.dsn=https://123@test.io/22222
 quarkus.log.sentry.level=TRACE
 quarkus.log.sentry.in-app-packages=io.quarkus.logging.sentry,org.test
-quarkus.log.sentry.environment=test-environment
+quarkus.log.sentry.release=releaseABC
