--- a/integration-tests/flyway/src/main/resources/application.properties
+++ b/integration-tests/flyway/src/main/resources/application.properties
@@ -13,5 +13,6 @@ quarkus.flyway.table=flyway_quarkus_history
 quarkus.flyway.locations=db/location1,classpath:db/location2
 quarkus.flyway.sql-migration-prefix=V
 quarkus.flyway.migrate-at-start=true
+quarkus.flyway.placeholders.foo=bar
 
 quarkus.hibernate-orm.database.generation=validate
