Fix unit test and jvm build

--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -381,6 +381,7 @@ jobs:
           - category: HTTP
             timeout: 35
             test-modules: >
+              cxf
               resteasy-jackson
               resteasy-mutiny
               vertx
