debug remaining native issue

--- a/integration-tests/cxf/pom.xml
+++ b/integration-tests/cxf/pom.xml
@@ -109,6 +109,7 @@
                                     <cleanupServer>true</cleanupServer>
                                     <enableHttpUrlHandler>true</enableHttpUrlHandler>
                                     <graalvmHome>${graalvmHome}</graalvmHome>
+                                    <additionalBuildArgs>--allow-incomplete-classpath</additionalBuildArgs>
                                 </configuration>
                             </execution>
                         </executions>
