--- a/integration-tests/vault/pom.xml
+++ b/integration-tests/vault/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>quarkus-vault-deployment</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
