--- a/integration-tests/main/pom.xml
+++ b/integration-tests/main/pom.xml
@@ -148,6 +148,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
         </dependency>
@@ -156,6 +161,12 @@
             <groupId>org.ops4j.pax.web.samples.web-fragment</groupId>
             <artifactId>fragment</artifactId>
             <version>7.3.3</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Issue 7854: ensure that mockito works properly -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
