--- a/extensions/resteasy-jackson/runtime/pom.xml
+++ b/extensions/resteasy-jackson/runtime/pom.xml
@@ -30,6 +30,10 @@
                     <groupId>jakarta.xml.bind</groupId>
                     <artifactId>jakarta.xml.bind-api</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.checkerframework</groupId>
+                    <artifactId>checker-qual</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
