--- a/extensions/spring-cloud-config-client/runtime/pom.xml
+++ b/extensions/spring-cloud-config-client/runtime/pom.xml
@@ -56,6 +56,10 @@
                     <groupId>javax.xml.bind</groupId>
                     <artifactId>jaxb-api</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.checkerframework</groupId>
+                    <artifactId>checker-qual</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
